Add show token checkbox in settings dialog.
Closes #10